# threadmusic

./: Dockerfile  docker-compose.yml  package-lock.json
backend/: docker-compose.yml  vockey.pem
backend/backend-cloud-auth/: .env.template  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  ingest.sql  pyproject.toml
backend/backend-cloud-auth/artists/: models.py  serializers.py  views.py
backend/backend-cloud-auth/artists/migrations/: 0001_initial.py  0002_artista_delete_artist.py
backend/backend-cloud-auth/clients/: models.py  serializers.py  views.py
backend/backend-cloud-auth/clients/migrations/: 0001_initial.py
backend/backend-cloud-auth/core/: settings.py  urls.py
backend/backend-cloud-auth/users/: models.py  serializer.py  tests.py  urls.py  views.py
backend/backend-cloud-auth/users/auth/: urls.py  utils.py  views.py
backend/backend-cloud-auth/users/migrations/: 0001_initial.py  0002_alter_customuser_email_alter_customuser_password.py  0003_customuser_contraseña_customuser_correo_and_more.py  0004_rename_company_customuser_contrasena_and_more.py  0005_remove_customuser_correo_remove_customuser_usuario_and_more.py
backend/system-design/: README.md  artists.csv  bookmarks.csv  clients.csv  data.ipynb  hilos.csv  main.py  posts.csv  pyproject.toml  songs.csv  users.csv
backend/system-design/containers/: .env.example  .gitignore  README.md  docker-compose.yml  requirements.txt
backend/system-design/mock_data_large/: Artista.csv  Artista_Songs.csv  Bookmarks.csv  Cliente.csv  Cliente_Artista.csv  Hilo.csv  Songs.csv  User.csv
(+111 files in other folders)
