[project]
name = "system-design"
version = "0.1.0"
description = ""
authors = [
    {name = "Alexander Morales-Panitz",email = "alexander@moralespanitz.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.2.5,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "faker (>=37.1.0,<38.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
